# flask-webapp-KBSI

./: README.md  calculator.py  fix5.py  fix6.py  fix_circular_deps.py  fix_circular_deps_2.py  fix_isocalc.py  fix_mspy_all.py  fix_mspy_final.py  flask_app.py  isocalc.py  main.py  patch_isoc.py  pycalc_fix.py  pyproject.toml  requirements.txt  requirment.txt  setup.py  test_app.py  test_m2f.py
.jules/: sentinel.md
mspy/: __init__.py  blocks.py  mod_basics.py  mod_formulator.py  mod_pattern.py  mod_stopper.py  obj_compound.py  periodic_table.py  py_calculations.py
static/: submit.css
templates/: about.html  index.html  isoc-submit.html  isoc-table.html  layout.html  m2f-submit.html  m2f-table.html  tools.html
tests/: test_app.py  test_m2f.py  test_security.py
