[project]
name = "flask-webapp-kbsi"
version = "1.0.0"
description = "Flask web application for mass spectrometry calculations"
authors = [
    { name = "KBSI" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.1.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "scipy>=1.15.0",
    "mpld3>=0.5.10",
    "Jinja2>=3.1.6",
    "MarkupSafe>=3.0.2",
    "Werkzeug>=3.1.6",
    "itsdangerous>=2.2.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.1",
    "six>=1.17.0",
    "pyparsing>=3.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
    "pytest>=8.0.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
